# ai

./: .gitignore  Dockerfile  Dockerfile.template  README.md  bento_config.yaml  bentofile.yaml  build_bento.sh  pyproject.toml  pytest.ini  serve.sh  service.py  settings.local.yaml  settings.yaml  setup.py
.github/workflows/: build-container.yaml  build.yaml  codeql.yml  pipeline.yaml  push.yaml  test.yaml
ai_api/: __init__.py  main.py
ai_api/database/: __init__.py  postgres_client.py
ai_api/model/: __init__.py
ai_api/model/api/: __init__.py  embed.py  image_search.py  process.py  protocols.py  query_search.py  service.py  status.py
ai_api/orm/: __init__.py  annotation.py  base.py  gallery_embedding.py  image.py
ai_api/services/: __init__.py  inference_service.py
ai_api/util/: __init__.py  guard.py  logger.py  singleton.py
alembic/: env.py
alembic/versions/: 73cbf5c3801e_.py  b4328055fa2f_.py  d8c1f6a0457e_.py  daa658cb2a0_.py  f86ad1c80fd3_.py
build_ctx/: .bentoignore
src/ai_api/: __init__.py  main.py
src/ai_api/database/: postgres_client.py
src/ai_api/model/api/: process.py  query_search.py  search.py  status.py
src/ai_api/orm/: __init__.py  annotation.py  captioning_model.py  gallery_embedding.py  image.py  image_data.py  image_embedding_model.py  modified_image_data.py  text_embedding_model.py
src/ai_api/runners/: embedding_runner.py
src/ai_api/services/: embedding_service.py  inference_service.py
src/ai_api/util/: guard.py  logger.py
tests/: conftest.py
tests/unit/: test_000_dynaconf.py  test_001_api_service.py  test_002_embedding_service.py
