[tool.poetry]
name = "evagallery-ai-api"
version = "0.0.1-pre"
readme = "README.md"
description = "The API endpoint for interacting with EVA Gallery's AI functionality"
authors = ["slobodaapl <slobodaapl@gmail.com>"]
packages = [{ include = "ai_api", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
accelerate = ">=1.1.1,1.*"
fastapi = ">=0.115.6,0.*"
starlette = ">=0.40.0,0.*"
bentoml = { version = ">=1.3.19, 1.*", extras = [ "tracing_otlp" ] }
diffusers = ">=0.24.0,0.*"
opencv-python = ">=4.10.0,4.*"
dynaconf = "3.*"
PyJWT = "2.*"
transformers = "4.*"
tornado = ">=6.4.2,6.*"
asyncpg = "0.*"
sqlalchemy = "2.*"
python-multipart = ">=0.0.18,0.*"
invisible-watermark = ">=0.2.0,0.*"
torch = { version = "2.*", source = "pytorch-gpu" }
torchvision = { version = "0.*", source = "pytorch-gpu" }
numpy = "2.*"
onnxruntime = "1.*"
imagehash = ">=4.3.1,4.*"
aiosqlite = "0.*"
aiohttp = ">=3.11.9,3.*"
sentence-transformers = "3.*"
pgvector = "0.*"
loguru = "0.*"
alembic = "1.*"
psycopg2-binary = "2.*"
scikit-image = "0.*"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.10.0"
pre-commit = "3.*"
bandit = "1.*"
pytest = "8.*"
pytest-socket = "0.*"
pytest-dependency = "0.*"
pytest-order = "1.*"
pytest-timeout = "2.*"
pytest-cov = "6.*"
pytest-asyncio = "0.*"
ipykernel = "^6.29.5"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.coverage.run]
source = ["src"]
omit = ["./tests/*", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "if self.debug",
    "if settings.debug",
    "if settings.testing",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
